kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: BM
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bm-deploy
  template:
    metadata:
      labels:
        app: bm-deploy
    spec:
      containers:
        - name: bm-image
          image: hatem95/bm-image:014b0d139ea52ad0ec3d378aa3ba7ba0d9659b9d
          ports:
            - containerPort: 8080
