kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bm-service
spec:
  selector:
    app: bm-deploy
    type: ClusterIP # by default it is ClusterIP but we can confirm the type.
  ports:
    - name: http
      port: 80
      targetPort: 8080
