kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bm-ingress
spec:
  rules:
    - host: your-bm.com
      http:
        paths:
          - path: /live
            pathType: Prefix
            backend:
              service:
                name: bm-service
                port:
                  name: http
